finished modal, snackbar, some styling

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,3 +1,35 @@
 .navigation a {
   margin-right: 1rem;
 }
+
+.title {
+  font-family: "Raleway", sans-serif;
+  color: rgb(87, 66, 184);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.header a {
+  text-decoration: none;
+}
+
+.logoutButton {
+  background-color: rgb(87, 66, 184);
+  color: white;
+  padding: 0.6rem;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
