--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto&display=swap");
+
 html,
 * {
   box-sizing: border-box;
-  /* margin: 0;
-  padding: 0; */
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  color: #444;
+}
+
+body {
+  background-color: rgb(243, 243, 243);
 }
