--- a/src/components/Activity.module.css
+++ b/src/components/Activity.module.css
@@ -1,5 +1,64 @@
 .activity {
-  border: 1px solid salmon;
+  background-color: white;
+  border-radius: 10px;
+  width: 50vw;
+  margin: 1rem 0.5rem;
+}
+
+.inner {
+  margin: 1.5rem 2rem 1.5rem 1.5rem;
+  padding: 0.5rem 0 1rem 1.5rem;
+  border-left: 3px solid orange;
+}
+
+.activity h2,
+.activity a {
+  color: orange;
+}
+
+.activity p {
+  margin: 0.7rem 0;
+}
+
+.activity h2:hover,
+.activity a:hover {
+  color: rgb(224, 133, 48);
+  transition: color 0.5s ease-in-out;
+}
+
+/* FORM */
+.textInput {
+  margin-bottom: 1rem;
+}
+
+.textInput textarea {
   padding: 0.5rem;
-  margin: 0.5rem;
+}
+
+.editFormToggle {
+  border: none;
+  margin-right: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 4px;
+  color: black;
+  background-color: white;
+  border: 1px solid black;
+}
+
+.editFormToggle:hover {
+  background-color: lightgrey;
+  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+}
+
+.acceptButton {
+  color: white;
+  background-color: orange;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 4px;
+}
+
+.acceptButton:hover {
+  background-color: rgb(243, 113, 38);
+  transition: background-color 0.5s ease-in-out;
 }
