--- a/src/components/ui/Modal.module.css
+++ b/src/components/ui/Modal.module.css
@@ -16,7 +16,47 @@
   width: 95%;
   max-width: 300px;
   background-color: #fff;
-  border: 1px solid red;
-  padding: 1rem;
+  border: 1px solid orange;
+  border-radius: 10px;
+  padding: 1.5rem;
   box-shadow: 0 0 5px 3px #ccc;
+}
+
+.window p {
+  margin-top: 1rem;
+}
+
+.actions {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.actions button {
+  padding: 0.5rem;
+  border-radius: 4px;
+}
+
+.cancelButton {
+  border: 1px solid black;
+  background-color: white;
+  padding: 0.5rem;
+}
+
+.cancelButton:hover {
+  background-color: lightgrey;
+  transition: background-color 0.5s ease-in-out;
+}
+
+.acceptButton {
+  background-color: rgb(255, 66, 66);
+  border: 1px solid rgb(255, 66, 66);
+  color: white;
+  padding: 0.5rem;
+}
+
+.acceptButton:hover {
+  background-color: rgb(173, 0, 0);
+  border: 1px solid rgb(173, 0, 0);
+  transition: background-color 0.5s ease-in-out, border 0.5s ease-in-out;
 }
