--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 html,
 * {
@@ -6,9 +6,10 @@ html,
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  color: #444;
+  color: #707070;
 }
 
 body {
-  background-color: rgb(243, 243, 243);
+  background: rgb(240, 240, 240);
+  height: 100vh;
 }
