--- a/src/pages/LoginRegister.module.css
+++ b/src/pages/LoginRegister.module.css
@@ -1,3 +1,85 @@
+.loginRegister {
+  display: flex;
+  justify-content: center;
+}
+
+.loginPanel,
+.registerPanel {
+  padding: 2rem;
+  height: 70vh;
+  width: 35vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.loginPanel h3,
+.registerPanel h3 {
+  color: white;
+  font-size: 3rem;
+  margin: 1rem;
+}
+
+.loginPanel p,
+.registerPanel p {
+  font-size: 1.2rem;
+  color: white;
+}
+
+.loginPanel {
+  background-color: #ffa500;
+  background: linear-gradient(
+    236deg,
+    rgba(255, 165, 0, 1) 30%,
+    rgba(238, 67, 19, 1) 100%
+  );
+}
+
+.registerPanel {
+  background-color: #0061ff;
+  background: linear-gradient(
+    161deg,
+    rgba(0, 97, 255, 1) 30%,
+    rgba(5, 22, 133, 1) 100%
+  );
+}
 .form {
-  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 25vw;
+  background-color: white;
+  height: 70vh;
+}
+
+.form * {
+  margin-top: 1rem;
+}
+
+.form h1 {
+  font-size: 3rem;
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.submitButton {
+  background-color: #0061ff;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  width: 10rem;
+  padding: 0.7rem;
+  font-size: 1rem;
+}
+
+.submitButton:hover {
+  background-color: #003c9c;
+  transition: background-color 0.3s ease-in-out;
 }
