--- a/src/components/EditRoutineForm.module.css
+++ b/src/components/EditRoutineForm.module.css
@@ -3,11 +3,7 @@
   border-radius: 10px;
   width: 15rem;
   background-color: rgb(255, 255, 255);
-  padding: 0.5rem;
-}
-
-.form * {
-  margin: 0.5rem;
+  padding: 1rem;
 }
 
 .form button {
@@ -18,6 +14,7 @@
 .buttonBox {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 .cancelButton {
