--- a/src/components/Activity.module.css
+++ b/src/components/Activity.module.css
@@ -1,8 +1,7 @@
 .activity {
   background-color: white;
   border-radius: 10px;
-  width: 50vw;
-  margin: 1rem 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .inner {
@@ -29,10 +28,13 @@
 /* FORM */
 .textInput {
   margin-bottom: 1rem;
+  width: 100%;
+  max-width: 400px;
 }
 
 .textInput textarea {
   padding: 0.5rem;
+  width: 100%;
 }
 
 .editFormToggle {
