--- a/src/components/Routine.module.css
+++ b/src/components/Routine.module.css
@@ -1,14 +1,13 @@
 .routine {
   background-color: white;
   border-radius: 10px;
-  width: 50vw;
-  margin: 1rem 0.5rem;
+  margin: 0 0 1rem 0;
+  padding: 1.5rem;
 }
 
 .inner {
-  margin: 1.5rem 2rem 1.5rem 1.5rem;
-  padding: 1rem 0 1rem 1.5rem;
   border-left: 3px solid orange;
+  padding-left: 1rem;
 }
 
 .goal,
@@ -18,7 +17,7 @@
 
 .routineTop {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
 }
 
@@ -37,7 +36,7 @@
 
 .editFormBox {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .editRoutineButton {
@@ -51,7 +50,7 @@
 }
 
 .labelTR td {
-  padding: 0.3rem 2rem 0.3rem 0;
+  padding: 0.3rem 1.25rem 0.3rem 0;
 }
 
 .deleteTD {
@@ -97,7 +96,6 @@
   padding: 0.5rem 0.5rem 0.5rem 0.6rem;
   border-radius: 4px;
   height: 2rem;
-  margin-left: 0.5rem;
 }
 
 .editRoutineButton i {
@@ -146,7 +144,7 @@
 
 .deleteButtonBox {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .deleteButton {
