--- a/src/pages/Activities.module.css
+++ b/src/pages/Activities.module.css
@@ -1,35 +1,35 @@
 .activities {
   padding: 1rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .activities h1 {
-  margin: 1rem;
-  padding-right: 1rem;
+  padding-right: 2rem;
   font-size: 2.75rem;
   border-right: 3px solid #0061ff;
 }
 
 .main {
+  padding-left: 2rem;
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
 
 .openFormButton {
-  margin: 1rem;
   padding: 1rem;
   font-size: 1rem;
-  width: 15vw;
   background-color: #0061ff;
   color: white;
   border: none;
   border-radius: 4px;
+  max-width: 150px;
+  margin-bottom: 1rem;
 }
 
 .openFormButton i {
   color: white;
-  margin-right: 0.2rem;
 }
 
 .openFormButton:hover {
@@ -39,7 +39,7 @@
 
 .form {
   display: flex;
-  margin: 1rem 0 0 0.5rem;
+  margin: 0 0 1rem 0;
   align-items: center;
   background-color: white;
   border-radius: 10px;
@@ -52,20 +52,21 @@
   font-size: 1.5rem;
   width: 7rem;
   border-right: 3px solid #0061ff;
-  padding-right: 2rem;
-  margin: 0rem 2rem;
+  padding-right: 1rem;
+  margin-right: 1rem;
 }
 
 .formRight {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
 
 .cancelButtonBox {
+  align-self: flex-end;
   display: flex;
-  justify-content: end;
-  width: 15vw;
-  margin-bottom: 2rem;
+  justify-content: flex-end;
+  margin-bottom: 1rem;
 }
 
 .cancelButton i {
@@ -80,16 +81,13 @@
   padding: 0.5rem;
   font-weight: 600;
   height: 2rem;
+  align-self: flex-end;
 }
 
 .inputsBox {
   display: flex;
   flex-direction: column;
-  justify-content: end;
-}
-
-.inputsBox * {
-  margin-bottom: 0.5rem;
+  justify-content: flex-end;
 }
 
 .submitButton {
@@ -97,7 +95,6 @@
   color: white;
   border: 1px solid #0061ff;
   border-radius: 4px;
-  width: 10.5rem;
 }
 
 .submitButton:hover {
