--- a/src/pages/Routines.module.css
+++ b/src/pages/Routines.module.css
@@ -6,28 +6,30 @@
 
 .routinespage h1 {
   display: flex;
-  align-items: start;
-  margin: 1rem;
-  padding-right: 1rem;
+  align-items: flex-start;
   border-right: 3px solid #0061ff;
   font-size: 2.75rem;
+  padding-right: 2rem;
+  flex-basis: 230px;
 }
 
 .main {
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
+  padding-left: 2rem;
 }
 
 /* For "My Routines" */
 .openFormButton {
-  margin: 1rem 0 0 0.5rem;
   padding: 1rem;
   font-size: 1rem;
-  width: 15vw;
+  max-width: 150px;
   background-color: #0061ff;
   color: white;
   border: none;
   border-radius: 4px;
+  margin-bottom: 1rem;
 }
 
 .openFormButton i {
@@ -42,7 +44,9 @@
 
 .form {
   display: flex;
-  margin: 1rem 0 0 0.5rem;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 0 1rem 0;
   align-items: center;
   background-color: white;
   border-radius: 10px;
@@ -62,15 +66,32 @@
 .formRight {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
+}
+
+.formContent {
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+}
+
+.formContent h3 {
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .cancelButtonBox {
   display: flex;
-  justify-content: end;
-  width: 15vw;
-  margin-bottom: 2rem;
+  align-self: flex-end;
+  width: 100%;
 }
 
+.cancelButton {
+  align-self: flex-end;
+  margin-bottom: 1rem;
+}
 .cancelButton i {
   color: black;
 }
@@ -88,19 +109,19 @@
 .inputsBox {
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
-.inputsBox * {
+/* .inputsBox * {
   margin-bottom: 0.5rem;
-}
+} */
 
 .submitButton {
   background-color: #0061ff;
   color: white;
   border: 1px solid #0061ff;
   border-radius: 4px;
-  width: 10.5rem;
+  align-self: flex-end;
 }
 
 .submitButton:hover {
